[gd_scene load_steps=13 format=3 uid="uid://86nioqfghter"]

[ext_resource type="Script" uid="uid://pem48no5x32q" path="res://rigid_player_platformer_2d.gd" id="1_jwyup"]
[ext_resource type="Texture2D" uid="uid://b8hoyi14314g" path="res://kenney_simplified-platformer-pack/PNG/Characters Greyscale/platformChar_idle.png" id="1_wad00"]
[ext_resource type="Texture2D" uid="uid://3esr7viqm7r5" path="res://kenney_simplified-platformer-pack/Vector/platformPack_character_vector.svg" id="2_kxp8c"]
[ext_resource type="Texture2D" uid="uid://q20s4hcf2l3r" path="res://kenney_simplified-platformer-pack/Vector/platformPack_character_front_vector.svg" id="4_k20b2"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_bhsmj"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_kxp8c"]
radius = 25.69
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kxp8c"]
size = Vector2(50, 37)

[sub_resource type="Animation" id="Animation_krwp3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(20, -10, 96, 96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Front:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(20, -10, 96, 96)]
}

[sub_resource type="Animation" id="Animation_bhb00"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(20, -10, 96, 96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Front:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(20, -10, 96, 96)]
}

[sub_resource type="Animation" id="Animation_6ubh2"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(116, -10, 96, 96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Front:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(116, -10, 96, 96)]
}

[sub_resource type="Animation" id="Animation_1wq7o"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(212, -10, 96, 96), Rect2(308, -10, 96, 96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("%Front:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(212, -10, 96, 96), Rect2(308, -10, 96, 96)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1a7ed"]
_data = {
&"RESET": SubResource("Animation_krwp3"),
&"idle": SubResource("Animation_bhb00"),
&"jump": SubResource("Animation_6ubh2"),
&"walk": SubResource("Animation_1wq7o")
}

[node name="RigidPlayerPlatformer2D" type="RigidBody2D" node_paths=PackedStringArray("timer")]
process_mode = 1
z_index = 2
collision_layer = 3
physics_material_override = SubResource("PhysicsMaterial_bhsmj")
lock_rotation = true
script = ExtResource("1_jwyup")
color = Color(0.92, 0.92, 0.92, 1)
SPEED = 350.0
JUMP_VELOCITY = -560.0
timer = NodePath("Timer")

[node name="Visuals" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("2_kxp8c")
region_enabled = true
region_rect = Rect2(20, -10, 96, 96)

[node name="Visuals2" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
texture = ExtResource("1_wad00")
region_rect = Rect2(16, -8, 96, 96)

[node name="Front" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("4_k20b2")
region_enabled = true
region_rect = Rect2(20, -10, 96, 96)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 15.5)
shape = SubResource("CapsuleShape2D_kxp8c")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_kxp8c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
root_node = NodePath("../Visuals")
libraries = {
&"": SubResource("AnimationLibrary_1a7ed")
}

[node name="LeftRayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(-23, 30)
target_position = Vector2(0, 25)

[node name="CenterRayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(0, 30)
target_position = Vector2(0, 25)

[node name="RightRayCast2D" type="RayCast2D" parent="."]
unique_name_in_owner = true
visible = false
position = Vector2(23, 30)
target_position = Vector2(0, 25)

[node name="Timer" type="Timer" parent="."]
wait_time = 60.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
